docs: creacion de apps en django

--- a/Django.ipynb
+++ b/Django.ipynb
@@ -110,7 +110,22 @@
     "\n",
     "accediendo a la dirección proporcionada entraras a tu aplicación lo que significa que hemos creado nuestra primer aplicación en Django.\n",
     "\n",
-    "![app](images/app_server.png)"
+    "![app](images/app_server.png)\n",
+    "\n",
+    "## Como responder con contenido web.\n",
+    "___\n",
+    "\n",
+    "Desde nuestra aplicación de Django vamos agregar el concepto de *APP*, este nos permitirá organizar de mejor manera nuestras aplicaciones Django, una aplicación normalmente organiza una parte de nuestro sistema, por ejemplo una app para la parte de la seguridad de la aplicación, otra para organizar las paginas generales de la app para ello debemos localizarnos en la carpeta de nuestra aplicación desde la terminal y ejecutar el comando `python manage.py startapp nombre_del_app`\n",
+    "\n",
+    "![app](images/creacion_app.png)\n",
+    "\n",
+    "Una vez realizado esto se nos creara una carpeta con el nombre de la app creada, con los archivos necesarios para administrar la app.\n",
+    "\n",
+    "![admin_app](images/files_app_admin.png)\n",
+    "\n",
+    "De momento no son necesarios todos los demás archivos con excepción de **views** que es con el que trabajaremos y donde se incluirá el código que se mostrara en el navegador web, ademas cada vez que creamos una nueva app es necesario registrarla, para ello nos dirigiremos a la carpeta principal de la aplicación y dentro del archivo **`settings.py`** buscaremos la lista de **`INSTALLED_APPS`** y agregamos el nombre de nuestra app a la lista.\n",
+    "\n",
+    "![reg_app](images/register_app.png)"
    ]
   }
  ],
