docs: documentacion agregada

--- a/Django.ipynb
+++ b/Django.ipynb
@@ -125,7 +125,38 @@
     "\n",
     "De momento no son necesarios todos los demás archivos con excepción de **views** que es con el que trabajaremos y donde se incluirá el código que se mostrara en el navegador web, ademas cada vez que creamos una nueva app es necesario registrarla, para ello nos dirigiremos a la carpeta principal de la aplicación y dentro del archivo **`settings.py`** buscaremos la lista de **`INSTALLED_APPS`** y agregamos el nombre de nuestra app a la lista.\n",
     "\n",
-    "![reg_app](images/register_app.png)"
+    "![reg_app](images/register_app.png)\n",
+    "\n",
+    "Una vez registrada nuestra aplicación es igual necesario definir una url, esto lo podemos hacer de igual manera en la carpeta del proyecto ingresando a **`urls.py`** ya que cada app tiene su propio administrador por lo que hay que agregar nuestro nuevo admin al path de Django.\n",
+    "\n",
+    "![admin_app](images/admin_preview.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para esto agregamos a la lista el nombre que le daremos a la ruta seguido de una función, esta función deberemos definir la dentro del componente que deseamos mandar a llamar. \n",
+    "\n",
+    "![url](images/new_url.png)\n",
+    "\n",
+    "Por lo que nos moveremos a **view.py** dentro del componente y crearemos nuestra función llamada *`welcome()`*\n",
+    "ala cual le pasaremos como parámetro `request`, este es un parámetro especial que proporciona Django que contiene información de la petición web que realizamos al servidor Django.\n",
+    "\n",
+    "![function](images/def_func.png)\n",
+    "\n",
+    "de momento mandaremos una respuesta sencilla para ello usaremos el método `HttpResponse` importándolo desde **`django.http`** y pasandole como parámetro un mensaje.\n",
+    "\n",
+    "![response](images/web_respond.png)\n",
+    "\n",
+    "Y finalmente importamos la función para su correcto funcionamiento el url establecido\n",
+    "\n",
+    "![import](images/import_func_welcome.png)\n",
+    "\n",
+    "Ahora corremos el servidor y comprobamos que funciona accediendo al url de la app creada.\n",
+    "\n",
+    "![new_app](images/welcome_app.png)\n"
    ]
   }
  ],
